2010-04-21 Thomas Ernst <typo3@thernst.de>
	* [Feature 7057] Nicer selection of fieldgroups in backend
	* [Feature 7057] Fieldgroup selection in frontend editing
	* [Feature 7057] Manual updated

2010-04-18 Thomas Ernst <typo3@thernst.de>
	* [Feature 7057] Enable different sets of userfields
	
2010-04-14 Thomas Ernst <typo3@thernst.de>
	* [Bug 7036] cal frontend editing: Create event not working due to register4cal constraints
	* [Feature 7249] Registering again after unregistering -> only one record should be kept
	* Published version 0.5.2

2010-04-04 Thomas Ernst <typo3@thernst.de>
	* Published version 0.5.1

2010-03-29 Thomas Ernst <typo3@thernst.de>
	* [Bug 7056] Fixed XML in locallang.xml

2010-03-06 Thomas Ernst <typo3@thernst.de>
	* Added danish translation (thanks to Joerg Kummer)
	* Manual updated
	* Published version 0.5.0

2010-02-06 Thomas Ernst <typo3@thernst.de>
	* [Bug 6375] Registration form is displayed with all views if multiple views are placed on one page (thanks to Paul Vetch)

2010-01-29 Thomas Ernst <typo3@thernst.de>
	* [Bug 6257] End of registration period not taken into account (thanks to Joerg Kummer)
	* [Bug 6161] Syntax error in rendering vlass (thanks to Xavier Perseguers)
	* [Bug 5943] Compatibility to cal 1.3.0 (thanks to Paul Vetch)

2009-12-09 Thomas Ernst <typo3@thernst.de>
	* register4cal-related fields validated in backend editing
	* register4cal-related fields validated in frontend editing
	* Corrected bug using organizer email for the notification mail (thanks to Joerg Kummer)
	* Supporting different cal organizer data model (thanks to Joerg Kummer)
	* Waitlist-Checking can be initiated from attendees list for organizer
	* Markers for no. of places, no. of attendees and no. of waitlist entries available

2009-11-29 Thomas Ernst	<typo3@thernst.de>
	* Fields in event table now displayed in a separate tab in the backend
	* [Feature 5492] Limit number of attendees and implement waitlist